[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/PixelMapEditorPlugin/PixelMapDock.gd" type="Script" id=1]
[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=2]
[ext_resource path="res://addons/PixelMapEditorPlugin/PathEdit.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/PixelMapEditorPlugin/Icons/circle_hardness50.png" type="Texture2D" id=8]
[ext_resource path="res://addons/PixelMapEditorPlugin/Icons/circle_hardness500.png" type="Texture2D" id=9]
[ext_resource path="res://addons/PixelMapEditorPlugin/Icons/circle_hardness100.png" type="Texture2D" id=10]
[ext_resource path="res://addons/PixelMapEditorPlugin/Icons/circle_hardness25.png" type="Texture2D" id=11]
[ext_resource path="res://addons/PixelMapEditorPlugin/Reactions.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Editor/ShapeSquare.png" type="Texture2D" id=13]
[ext_resource path="res://Scenes/Editor/ShapeCircle.png" type="Texture2D" id=14]
[ext_resource path="res://Scenes/Editor/ShapeTriangle.png" type="Texture2D" id=15]

[sub_resource type="GDScript" id=1]
resource_name = "PresetButton"
script/source = "tool
extends Button

@export var target: NodePath

var color: Color

func _ready() -> void:
	color = get_child(0).color
	if color.r > 0 or color.g > 0 or color.b > 0:
		color.a = 0

func _pressed() -> void:
	get_node(target).set_pick_color(color)
	get_node(target).emit_signal(\"color_changed\", color)
"

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="GDScript" id=3]
resource_name = "CustomTexture"
script/source = "tool
extends Button

func _can_drop_data(position: Vector2, data) -> bool:
	print(data)
	return true

func _drop_data(position: Vector2, data) -> void:
	print(data)
"

[node name="Dock" type="PanelContainer"]
offset_right = 263.0
offset_bottom = 626.0
custom_minimum_size = Vector2( 300, 0 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 294.0
offset_bottom = 619.0
use_hidden_tabs_for_min_size = true

[node name="Texture2D" type="VBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Width" type="HBoxContainer" parent="TabContainer/Texture2D"]
offset_right = 279.0
offset_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Texture2D/Width"]
offset_left = 87.0
offset_top = 5.0
offset_right = 113.0
offset_bottom = 19.0
text = "Size"

[node name="NewTextureSize" type="SpinBox" parent="TabContainer/Texture2D/Width"]
unique_name_in_owner = true
offset_left = 117.0
offset_right = 191.0
offset_bottom = 24.0
max_value = 9192.0
value = 1024.0

[node name="CreateTexture" type="Button" parent="TabContainer/Texture2D"]
offset_top = 28.0
offset_right = 279.0
offset_bottom = 48.0
text = "Create texture"

[node name="PixelMapTexturePreview" type="TextureRect" parent="TabContainer/Texture2D"]
unique_name_in_owner = true
offset_left = 11.0
offset_top = 52.0
offset_right = 267.0
offset_bottom = 308.0
custom_minimum_size = Vector2( 256, 256 )
size_flags_horizontal = 4
expand = true
stretch_mode = 6

[node name="InputRect" type="ColorRect" parent="TabContainer/Texture2D/PixelMapTexturePreview"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="PixelMapTextureSize" type="Label" parent="TabContainer/Texture2D"]
unique_name_in_owner = true
offset_top = 312.0
offset_right = 279.0
offset_bottom = 326.0
text = "(0, 0)"
align = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Texture2D"]
offset_top = 330.0
offset_right = 279.0
offset_bottom = 334.0

[node name="PathEdit" parent="TabContainer/Texture2D" instance=ExtResource( 3 )]
offset_top = 338.0
offset_right = 279.0
offset_bottom = 362.0

[node name="ExportPNG" type="Button" parent="TabContainer/Texture2D"]
offset_top = 366.0
offset_right = 279.0
offset_bottom = 386.0
text = "Export PNG"

[node name="HSeparator5" type="HSeparator" parent="TabContainer/Texture2D"]
offset_top = 390.0
offset_right = 279.0
offset_bottom = 394.0

[node name="Label2" type="Label" parent="TabContainer/Texture2D"]
offset_top = 398.0
offset_right = 279.0
offset_bottom = 412.0
text = "Debug"
align = 1

[node name="HBox3" type="HBoxContainer" parent="TabContainer/Texture2D"]
offset_top = 416.0
offset_right = 279.0
offset_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QT_draw" type="CheckBox" parent="TabContainer/Texture2D/HBox3"]
offset_right = 80.0
offset_bottom = 24.0
disabled = true
text = "QT draw"

[node name="Edge_pixels" type="CheckBox" parent="TabContainer/Texture2D/HBox3"]
offset_left = 84.0
offset_right = 184.0
offset_bottom = 24.0
disabled = true
text = "Edge pixels"

[node name="LagSkip" type="CheckBox" parent="TabContainer/Texture2D/HBox3"]
offset_left = 188.0
offset_right = 279.0
offset_bottom = 24.0
text = "Skip lagfix"

[node name="Draw" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Label2" type="Label" parent="TabContainer/Draw"]
offset_right = 279.0
offset_bottom = 14.0
text = "LMB - draw material"
align = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Draw"]
offset_left = 57.0
offset_top = 18.0
offset_right = 222.0
offset_bottom = 58.0
size_flags_horizontal = 4
text = "Custom Draw"

[node name="Regular" type="VBoxContainer" parent="TabContainer/Draw"]
unique_name_in_owner = true
offset_top = 62.0
offset_right = 279.0
offset_bottom = 128.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Draw/Regular"]
offset_right = 279.0
offset_bottom = 38.0
columns = 2

[node name="Label" type="Label" parent="TabContainer/Draw/Regular/GridContainer"]
offset_right = 137.0
offset_bottom = 14.0
size_flags_horizontal = 3
text = "Material"
align = 1

[node name="Label2" type="Label" parent="TabContainer/Draw/Regular/GridContainer"]
offset_left = 141.0
offset_right = 278.0
offset_bottom = 14.0
size_flags_horizontal = 3
text = "Restrict"
align = 1

[node name="MaterialList" type="OptionButton" parent="TabContainer/Draw/Regular/GridContainer"]
unique_name_in_owner = true
offset_top = 18.0
offset_right = 137.0
offset_bottom = 38.0

[node name="RestrictList" type="OptionButton" parent="TabContainer/Draw/Regular/GridContainer"]
unique_name_in_owner = true
offset_left = 141.0
offset_top = 18.0
offset_right = 278.0
offset_bottom = 38.0

[node name="CheckBox" type="CheckBox" parent="TabContainer/Draw/Regular"]
offset_left = 64.0
offset_top = 42.0
offset_right = 214.0
offset_bottom = 66.0
size_flags_horizontal = 4
text = "Skip empty regions"

[node name="Custom" type="VBoxContainer" parent="TabContainer/Draw"]
unique_name_in_owner = true
visible = false
offset_top = 62.0
offset_right = 279.0
offset_bottom = 130.0

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Draw/Custom"]
offset_right = 279.0
offset_bottom = 20.0

[node name="Label2" type="Label" parent="TabContainer/Draw/Custom/HBoxContainer2"]
offset_top = 3.0
offset_right = 36.0
offset_bottom = 17.0
text = "Mode"
align = 1

[node name="OptionButton" type="OptionButton" parent="TabContainer/Draw/Custom/HBoxContainer2"]
offset_left = 40.0
offset_right = 279.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "Replace"
items = [ "Replace", null, false, 0, null, "Add", null, false, 1, null, "Subtract", null, false, 2, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Draw/Custom"]
offset_top = 24.0
offset_right = 279.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="TabContainer/Draw/Custom/HBoxContainer3"]
offset_top = 3.0
offset_right = 33.0
offset_bottom = 17.0
text = "Color"
align = 1

[node name="CustomColor" type="ColorPickerButton" parent="TabContainer/Draw/Custom/HBoxContainer3"]
unique_name_in_owner = true
offset_left = 37.0
offset_right = 279.0
offset_bottom = 20.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Draw/Custom"]
offset_top = 48.0
offset_right = 279.0
offset_bottom = 68.0
alignment = 1

[node name="Button" type="Button" parent="TabContainer/Draw/Custom/HBoxContainer"]
offset_left = 93.0
offset_right = 113.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 20, 20 )
script = SubResource( 1 )
target = NodePath("../../HBoxContainer3/CustomColor")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Draw/Custom/HBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )

[node name="Button2" type="Button" parent="TabContainer/Draw/Custom/HBoxContainer"]
offset_left = 117.0
offset_right = 137.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 20, 20 )
script = SubResource( 1 )
target = NodePath("../../HBoxContainer3/CustomColor")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Draw/Custom/HBoxContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
mouse_filter = 2
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="TabContainer/Draw/Custom/HBoxContainer"]
offset_left = 141.0
offset_right = 161.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 20, 20 )
script = SubResource( 1 )
target = NodePath("../../HBoxContainer3/CustomColor")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Draw/Custom/HBoxContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
mouse_filter = 2
color = Color( 0, 0, 1, 1 )

[node name="Button4" type="Button" parent="TabContainer/Draw/Custom/HBoxContainer"]
offset_left = 165.0
offset_right = 185.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 20, 20 )
script = SubResource( 1 )
target = NodePath("../../HBoxContainer3/CustomColor")

[node name="ColorRect" type="ColorRect" parent="TabContainer/Draw/Custom/HBoxContainer/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="HSeparator" type="HSeparator" parent="TabContainer/Draw"]
offset_top = 132.0
offset_right = 279.0
offset_bottom = 136.0

[node name="Label3" type="Label" parent="TabContainer/Draw"]
offset_top = 140.0
offset_right = 279.0
offset_bottom = 154.0
text = "RMB - apply damage"
align = 1

[node name="Type" type="OptionButton" parent="TabContainer/Draw"]
offset_top = 158.0
offset_right = 279.0
offset_bottom = 178.0
text = "Empty"
items = [ "Empty", null, false, 0, null, "Raw", null, false, 1, null, "Explosion", null, false, 2, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Draw"]
offset_top = 182.0
offset_right = 279.0
offset_bottom = 198.0

[node name="Label4" type="Label" parent="TabContainer/Draw/HBoxContainer"]
offset_left = 177.0
offset_top = -18.0
offset_right = 237.0
offset_bottom = -4.0
custom_minimum_size = Vector2( 60, 0 )
size_flags_horizontal = 4
text = "255"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3
custom_slider_path = NodePath("../DamageValue")

[node name="DamageValue" type="HSlider" parent="TabContainer/Draw/HBoxContainer"]
unique_name_in_owner = true
offset_left = 64.0
offset_right = 279.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 255.0
value = 255.0
rounded = true
editable = false

[node name="Raw" type="HSlider" parent="TabContainer/Draw"]
visible = false
offset_top = 202.0
offset_right = 279.0
offset_bottom = 218.0
min_value = 1.0
max_value = 1e+07
value = 1000.0
exp_edit = true
rounded = true

[node name="HSeparator3" type="HSeparator" parent="TabContainer/Draw"]
offset_top = 202.0
offset_right = 279.0
offset_bottom = 206.0

[node name="Label" type="Label" parent="TabContainer/Draw"]
offset_top = 210.0
offset_right = 279.0
offset_bottom = 224.0
text = "Drawing Shape3D"
align = 1

[node name="ShapeButtons" type="HBoxContainer" parent="TabContainer/Draw"]
unique_name_in_owner = true
offset_top = 228.0
offset_right = 279.0
offset_bottom = 260.0
alignment = 1

[node name="Button" type="Button" parent="TabContainer/Draw/ShapeButtons"]
offset_left = 64.0
offset_right = 96.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 32, 32 )
toggle_mode = true
pressed = true
group = SubResource( 2 )
icon = ExtResource( 14 )
expand_icon = true

[node name="Button2" type="Button" parent="TabContainer/Draw/ShapeButtons"]
offset_left = 100.0
offset_right = 132.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 32, 32 )
toggle_mode = true
group = SubResource( 2 )
icon = ExtResource( 13 )
expand_icon = true

[node name="Button3" type="Button" parent="TabContainer/Draw/ShapeButtons"]
offset_left = 136.0
offset_right = 168.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 32, 32 )
toggle_mode = true
group = SubResource( 2 )
icon = ExtResource( 15 )
expand_icon = true

[node name="Button4" type="Button" parent="TabContainer/Draw/ShapeButtons"]
offset_left = 172.0
offset_right = 215.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 32, 32 )
toggle_mode = true
group = SubResource( 2 )
text = "Drop"
expand_icon = true
script = SubResource( 3 )

[node name="DrawingSizeText" type="Label" parent="TabContainer/Draw"]
offset_top = 264.0
offset_right = 279.0
offset_bottom = 278.0
text = "Drawing Size"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Draw"]
offset_top = 282.0
offset_right = 279.0
offset_bottom = 298.0

[node name="Label4" type="Label" parent="TabContainer/Draw/HBoxContainer2"]
offset_left = 1.50394
offset_top = -18.0
offset_right = 61.5039
offset_bottom = -4.0
custom_minimum_size = Vector2( 60, 0 )
size_flags_horizontal = 4
text = "64"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3
custom_slider_path = NodePath("../DrawingSize")

[node name="DrawingSize" type="HSlider" parent="TabContainer/Draw/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 64.0
offset_right = 279.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 4.0
max_value = 512.0
value = 64.0

[node name="SizePresets" type="HBoxContainer" parent="TabContainer/Draw"]
unique_name_in_owner = true
offset_top = 302.0
offset_right = 279.0
offset_bottom = 322.0
alignment = 1

[node name="Button" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 29.0
offset_right = 49.0
offset_bottom = 20.0
text = "8"

[node name="Button2" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 53.0
offset_right = 81.0
offset_bottom = 20.0
text = "16"

[node name="Button6" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 85.0
offset_right = 113.0
offset_bottom = 20.0
text = "24"

[node name="Button3" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 117.0
offset_right = 145.0
offset_bottom = 20.0
text = "32"

[node name="Button5" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 149.0
offset_right = 177.0
offset_bottom = 20.0
text = "48"

[node name="Button4" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 181.0
offset_right = 209.0
offset_bottom = 20.0
text = "64"

[node name="Button7" type="Button" parent="TabContainer/Draw/SizePresets"]
offset_left = 213.0
offset_right = 249.0
offset_bottom = 20.0
text = "128"

[node name="Control" type="Control" parent="TabContainer/Draw"]
offset_top = 326.0
offset_right = 279.0
offset_bottom = 330.0
custom_minimum_size = Vector2( 0, 4 )

[node name="DrawingRotationText" type="Label" parent="TabContainer/Draw"]
offset_top = 334.0
offset_right = 279.0
offset_bottom = 348.0
text = "Drawing Rotation"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Draw"]
offset_top = 352.0
offset_right = 279.0
offset_bottom = 368.0

[node name="Label4" type="Label" parent="TabContainer/Draw/HBoxContainer3"]
offset_left = -22.0
offset_top = -18.0
offset_right = 38.0
offset_bottom = -4.0
custom_minimum_size = Vector2( 60, 0 )
size_flags_horizontal = 4
text = "0"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3
custom_slider_path = NodePath("../DrawingRotation")

[node name="DrawingRotation" type="HSlider" parent="TabContainer/Draw/HBoxContainer3"]
offset_left = 64.0
offset_right = 279.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 359.0

[node name="HardnessLabel" type="Label" parent="TabContainer/Draw"]
offset_top = 372.0
offset_right = 279.0
offset_bottom = 386.0
text = "Hardness"
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Draw"]
offset_top = 390.0
offset_right = 279.0
offset_bottom = 406.0

[node name="SliderLabel" type="Label" parent="TabContainer/Draw/HBoxContainer4"]
offset_left = 17.481
offset_top = -18.0
offset_right = 77.481
offset_bottom = -4.0
custom_minimum_size = Vector2( 60, 0 )
size_flags_horizontal = 4
text = "1"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3
custom_slider_path = NodePath("../HardnessValue")

[node name="HardnessValue" type="HSlider" parent="TabContainer/Draw/HBoxContainer4"]
offset_left = 64.0
offset_right = 279.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 5.0
step = 0.01
value = 1.0
allow_greater = true

[node name="HardnessPresets" type="HBoxContainer" parent="TabContainer/Draw"]
offset_top = 410.0
offset_right = 279.0
offset_bottom = 448.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hardness 25" type="Button" parent="TabContainer/Draw/HardnessPresets"]
offset_left = 21.0
offset_right = 65.0
offset_bottom = 38.0
icon = ExtResource( 11 )

[node name="Hardness 50" type="Button" parent="TabContainer/Draw/HardnessPresets"]
offset_left = 69.0
offset_right = 113.0
offset_bottom = 38.0
icon = ExtResource( 8 )

[node name="Hardness 100" type="Button" parent="TabContainer/Draw/HardnessPresets"]
offset_left = 117.0
offset_right = 161.0
offset_bottom = 38.0
icon = ExtResource( 10 )

[node name="Hardness 500" type="Button" parent="TabContainer/Draw/HardnessPresets"]
offset_left = 165.0
offset_right = 209.0
offset_bottom = 38.0
icon = ExtResource( 9 )

[node name="Hardness 1000000" type="Button" parent="TabContainer/Draw/HardnessPresets"]
offset_left = 213.0
offset_right = 257.0
offset_bottom = 38.0
icon = ExtResource( 9 )

[node name="Label" type="Label" parent="TabContainer/Draw/HardnessPresets/Hardness 1000000"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "inf"
align = 1
valign = 1

[node name="Materials" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="AddShader" type="Button" parent="TabContainer/Materials"]
offset_right = 279.0
offset_bottom = 20.0
text = "Add PixelMap shader"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Materials"]
offset_top = 24.0
offset_right = 279.0
offset_bottom = 28.0

[node name="Label" type="Label" parent="TabContainer/Materials"]
offset_top = 32.0
offset_right = 279.0
offset_bottom = 46.0
text = "Edit materials"
align = 1

[node name="MaterialEdit" type="ScrollContainer" parent="TabContainer/Materials"]
offset_top = 50.0
offset_right = 279.0
offset_bottom = 568.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="TabContainer/Materials/MaterialEdit"]
offset_right = 215.0
offset_bottom = 518.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_left = 10

[node name="Root" type="VBoxContainer" parent="TabContainer/Materials/MaterialEdit/Margin"]
offset_left = 10.0
offset_right = 205.0
offset_bottom = 518.0

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Materials"]
offset_top = 572.0
offset_right = 279.0
offset_bottom = 576.0

[node name="Reactions" parent="TabContainer/Materials" instance=ExtResource( 12 )]
visible = false
offset_top = 319.0
offset_right = 279.0
offset_bottom = 576.0
size_flags_vertical = 3

[connection signal="tab_changed" from="TabContainer" to="." method="set_current_tab"]
[connection signal="pressed" from="TabContainer/Texture2D/CreateTexture" to="." method="create_new_texture"]
[connection signal="toggled" from="TabContainer/Texture2D/HBox3/QT_draw" to="." method="toggle_debug_flag" binds= [ 0 ]]
[connection signal="toggled" from="TabContainer/Texture2D/HBox3/Edge_pixels" to="." method="toggle_debug_flag" binds= [ 1 ]]
[connection signal="toggled" from="TabContainer/Texture2D/HBox3/LagSkip" to="." method="toggle_debug_flag" binds= [ 2 ]]
[connection signal="toggled" from="TabContainer/Draw/CheckButton" to="." method="toggle_custom_draw"]
[connection signal="item_selected" from="TabContainer/Draw/Regular/GridContainer/MaterialList" to="." method="set_drawing_parameter" binds= [ "draw_material" ]]
[connection signal="item_selected" from="TabContainer/Draw/Regular/GridContainer/RestrictList" to="." method="set_drawing_parameter" binds= [ "draw_restrict" ]]
[connection signal="toggled" from="TabContainer/Draw/Regular/CheckBox" to="." method="set_drawing_parameter" binds= [ "draw_skip_empty" ]]
[connection signal="item_selected" from="TabContainer/Draw/Custom/HBoxContainer2/OptionButton" to="." method="set_drawing_parameter" binds= [ "draw_custom_mode" ]]
[connection signal="color_changed" from="TabContainer/Draw/Custom/HBoxContainer3/CustomColor" to="." method="set_drawing_parameter" binds= [ "draw_custom_color" ]]
[connection signal="item_selected" from="TabContainer/Draw/Type" to="." method="set_drawing_parameter" binds= [ "draw_damage_mode" ]]
[connection signal="value_changed" from="TabContainer/Draw/HBoxContainer/DamageValue" to="." method="set_drawing_parameter" binds= [ "draw_damage" ]]
[connection signal="value_changed" from="TabContainer/Draw/HBoxContainer2/DrawingSize" to="." method="set_drawing_parameter" binds= [ "draw_size" ]]
[connection signal="value_changed" from="TabContainer/Draw/HBoxContainer3/DrawingRotation" to="." method="set_drawing_parameter" binds= [ "draw_rotation" ]]
[connection signal="value_changed" from="TabContainer/Draw/HBoxContainer4/HardnessValue" to="." method="set_drawing_parameter" binds= [ "draw_hardness" ]]
